--- a/generic-indexer/static/hi-faceted-search.css
+++ b/generic-indexer/static/hi-faceted-search.css
@@ -1,118 +1,102 @@
-a {
-	cursor: pointer;
-}
 
-.list-facet ul {
-	overflow-y: auto;
-	max-height: 200px;
-}
-
-.list-facet ul li {
+.pagination > li {
 	cursor: pointer
 }
 
-.list-facet ul li:hover {
-	text-decoration: underline;
-}
+a {
+			cursor: pointer;
+		}
+		.list-facet ul {
+			overflow-y: auto;
+			max-height: 200px;
+		}
 
-.facet-range-slider {
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-user-drag: none;
-	user-drag: none;
-	cursor: pointer;
-	width: 100%;
-	stroke: #f1ebe6;
-	fill: #f1ebe6;
-}
+		.list-facet ul li {
+			cursor: pointer
+		}
 
-.facet-range-slider .range-line {
-	stroke-width: 8;
-}
+		.list-facet ul li:hover {
+			text-decoration: underline;
+		}
 
-.facet-range-slider .range-line circle {
-	stroke-width: 0;
-}
+		.facet-range-slider {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none; 
+			user-select: none; 
+			-webkit-user-drag: none;
+			user-drag: none;
+			cursor: pointer;
+			width: 100%;
+			stroke: #d5e6f1;
+			fill: #d5e6f1;
+		}
 
-.facet-range-slider .range-line circle.hovering,
-.facet-range-slider .range-line circle:hover {
-	fill: #bda47e;
-}
+		.facet-range-slider .range-line {
+			stroke-width: 8;
+		}
 
-.facet-range-slider .range-line path.hovering,
-.facet-range-slider .range-line path:hover {
-	stroke: #bda47e;
-}
+		.facet-range-slider .range-line circle {
+			stroke-width: 0;
+		}
 
-.current-query label,
-.solr-search-results ul label {
-	display: inline-block;
-	margin: 0 20px 0 0;
-	width: 120px;
-	color: #666;
-	overflow: hidden;
-	white-space: nowrap;
-	vertical-align: bottom;
-	text-overflow: ellipsis
-}
+		.facet-range-slider .range-line circle.hovering,
+		.facet-range-slider .range-line circle:hover {
+			fill: #2e82bb;
+		}
 
-.solr-search-results ul li ul {
-	list-style: none;
-	padding: 0;
-}
+		.facet-range-slider .range-line path.hovering,
+		.facet-range-slider .range-line path:hover {
+			stroke: #2e82bb;
+		}
 
-svg.search-icon {
-	stroke: #595959;
-	fill: #595959;
-}
+		.current-query label,
+		.solr-search-results ul label {
+			display: inline-block;
+			margin: 0 20px 0 0;
+			width: 120px;
+			color: #666;
+			overflow: hidden;
+			white-space: nowrap;
+			vertical-align: bottom;
+			text-overflow: ellipsis
+		}
 
-.current-query .label {
-	display: inline-block;
-	padding: 4px;
-	cursor: pointer;
-	margin-left: 4px;
-}
+		.solr-search-results ul li ul {
+			list-style: none;
+			padding: 0;
+		}
 
-.current-query .label:hover a {
-	color: #d08989;
-}
-.current-query .label a {
-	color: white;
-	margin-left: 4px;
-}
+		svg.search-icon {
+			stroke: #595959;
+			fill: #595959;
+		}
 
-.range-facet header h5 {
-	max-width: calc(100% - 75px)
+		.current-query .label {
+			display: inline-block;
+			padding: 4px;
+			cursor: pointer;
+			margin-left: 4px;
+		}
 
-}
+		.current-query .label:hover a {
+			color: red;
+		}
+		.current-query .label a {
+			color: white;
+			margin-left: 4px;
+		}
+		
+		/* new Bas */
+		
+		.facet-item {
+			margin-bottom:.3em;
+			}
+		
 
-.solr-search-fields > li > header > h5,
-.solr-search-fields > li > header > h4 {
-	cursor: pointer;
-	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #666;
-}
 
-.solr-search-fields > li > header > h5:hover,
-.solr-search-fields > li > header > h4:hover {
-	text-decoration: underline;
-}
-	/* new Bas */
-.facet-item-amount {
-	display:inline-block;
-	float:right;
-	color: #aaa;
-}
-
-.list-facet > .list-group {
-	box-shadow: none;
-}
-.list-facet > .list-group > .list-group-item {
-	border: none;
-}
-
-.list-facet > input {
-	width: calc(100% - 125px)
-}
+		.facet-item-amount {
+			display:inline-block;
+			float:right;
+			color:#ccc;
+			}
