--- a/generic-indexer/static/hi-interface.css
+++ b/generic-indexer/static/hi-interface.css
@@ -295,6 +295,8 @@ svg.facet-check-box.checked {
 	padding-top:10px;
 	height:40px;
 	}
+
+/*
 .downcase-then-capitalize {
 	text-transform:lowercase;
 }
@@ -302,7 +304,7 @@ svg.facet-check-box.checked {
 .downcase-then-capitalize:first-letter {
 	text-transform:uppercase;
 }
-
+*/
 
 /* results */
 .result-list ol{
